--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,7 +44,6 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
 
-
 # Doctrine Configuration
 doctrine:
     dbal:
@@ -102,11 +101,16 @@ fos_rest:
         include_format: false
     view:
         formats:
-            rss: true
-            xml: false
+            xml: true
+            json: true
         templating_formats:
             html: true
         force_redirects:
             html: true
         failed_validation: HTTP_BAD_REQUEST
         default_engine: twig
+        view_response_listener: true
+    format_listener:
+        rules:
+            - { path: '^/', priorities: ['json'], fallback_format: 'json'}
+
