--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -119,6 +119,31 @@ fos_rest:
         enabled: true # Permet a FosRest de convertir automatiquement les flux json entrant en array.
                       # si false, nous serions obligé de faire un json_decode($request->getContent(), true); pour avoir un array.
 
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: false
+        forced_allow_origin_value: ~
+    paths:
+        '^/api/':
+            allow_origin: ['*']
+            allow_headers: ['X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+        '^/':
+            origin_regex: true
+            allow_origin: ['^http://localhost:[0-9]+']
+            allow_headers: ['X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+            hosts: ['^api\.']
+
 nelmio_api_doc:
     documentation:
         info:
