add project fixtures

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -21,6 +21,9 @@ services:
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
         exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+    # Fixtures services
+    App\ShowCaseBundle\DataFixtures\ORM\LoadProjectData:
+        tags: [doctrine.fixture.orm]
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
@@ -33,6 +36,3 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
-
-
-
