--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,13 +16,16 @@ services:
 
     # makes classes in src/AppBundle available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    AppBundle\:
-        resource: '../../src/AppBundle/*'
+#    AppBundle\:
+#        resource: '../../src/AppBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+#        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
     # Fixtures services
     App\ShowCaseBundle\DataFixtures\ORM\LoadProjectData:
+        tags: [doctrine.fixture.orm]
+
+    App\ShowCaseBundle\DataFixtures\ORM\LoadUserData:
         tags: [doctrine.fixture.orm]
 
     # controllers are imported separately to make sure they're public
