--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,7 +12,7 @@ fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
 app.swagger_ui:
-    path: /api/doc/
+    path: /api/doc
     methods: GET
     defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
 
