--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.3",
         "knplabs/knp-paginator-bundle": "^2.7",
+        "nelmio/api-doc-bundle": "3.0",
         "nelmio/cors-bundle": "^1.5",
         "nelmio/api-doc-bundle": "3.0",
         "nelmio/cors-bundle": "^1.5",
