--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -124,5 +124,10 @@ nelmio_api_doc:
             title: Show Case Api documentation
             description: This is my api show case
             version: 1.0.0
+    routes:
+        path_patterns:
+            # Examples:
+            - ^/api
+            - ^/api(?!/admin)
 
 
