--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,6 +7,7 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_BOSS: ROLE_BOSS
 
     providers:
         fos_userbundle:
@@ -20,8 +21,6 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 always_use_default_target_path: false
                 default_target_path: app_show_case_admin_homepage
-
-
             logout:       true
             anonymous:    true
 
