--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,12 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "egeloen/ckeditor-bundle": "^6.0",
+        "friendsofsymfony/elastica-bundle": "^5.0",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/rest-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "^2.3",
         "knplabs/knp-paginator-bundle": "^2.7",
         "nelmio/api-doc-bundle": "3.0",
         "nelmio/cors-bundle": "^1.5",
